# SDiZO_1

./: .gitignore  CMakeLists.txt  README.md
py/: script.py
results/BST/: BSTFind_1000.csv  BSTPush_10000.csv
results/array/: arrayFindRandom_100.csv  arrayPushBack_100.csv  arrayPushFront_100.csv  arrayPushRandom_100.csv
results/heap/: heapPush_1000000.csv  heapRemove_100000.csv
results/list/: listFindRandom_100.csv  listPushRandom_100.csv  listTestPushBack_1000000.csv  listTestPushFront_1000000.csv
src/: Array.cpp  Array.h  BST.cpp  BST.h  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  Heap.cpp  Heap.h  Hello.cpp  main.cpp
test/: ArrayTest.cpp  BSTTest.cpp  CMakeLists.txt  DoublyLinkedListTest.cpp  HeapTest.cpp  HelloTest.cpp  Random.cpp  Random.h  main.cpp
tst_perf/: ArrayTest.cpp  ArrayTest.h  BSTTest.cpp  BSTTest.h  CMakeLists.txt  HeapTest.cpp  HeapTest.h  ListTest.cpp  ListTest.h  Random.cpp  Random.h  main.cpp
